Changes with class Locators

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,8 +1,10 @@
 [pytest]
+# Set the base directory for BDD features
+bdd_features_base_dir = tests/features
 addopts =
 ;    --junitxml="junit_report/junit_test_result.xml"
 ;    --log-file ./logs/test.log
-    --alluredir=allure/test_results
+;    --alluredir=allure/test_results
 ;    --html=html_report.html
 ;    --self-contained-html
 
