download only one project from Portfolio in Jenkinsfile

--- a/API_testing_framework_advanced_level/Jenkinsfile
+++ b/API_testing_framework_advanced_level/Jenkinsfile
@@ -5,7 +5,7 @@ pipeline {
         stage("Clone repository") {
             steps {
                 script {
-                    git branch: "main", url: "https://github.com/Yepavlov/Portfolio.git"
+                    git branch: "main", url: "https://github.com/Yepavlov/Portfolio/API_testing_framework_advanced_level.git"
                 }
             }
         }
@@ -33,7 +33,7 @@ pipeline {
         stage("Testing") {
             steps {
                 script {
-                    bat "python -m pytest Portfolio\\API_testing_framework_advanced_level\\tests\\tests.py"
+                    bat "python -m pytest"
                 }
             }
         }
